# zsxq-mcp

./: .gitignore  PACKAGE_INSTALLATION.md  PUBLISHING_GUIDE.md  QUICKSTART.md  README.md  TEST_RESULTS.md  UVX_STARTUP.md  pyproject.toml  图片上传功能实现.md  图片功能修复完成.md  配置完成总结.md
.github/workflows/: publish.yml
.serena/: project.yml
.serena/memories/: zsxq-mcp-project-summary.md  zsxq-mcp-publishing-checklist.md
.specstory/: .project.json
.specstory/history/: 2025-11-10_13-25-54Z-uvx.md  2025-11-10_13-25-54Z.md  2025-11-11_09-41-56Z-volumes-data-openmind-coding.md  2025-11-11_09-41-56Z.md
src/zsxq_mcp/: server.py
tests/: test_server.py
