[project]
name = "zsxq-publisher"
version = "0.1.0"
description = "MCP server for publishing content to Zhishixingqiu (知识星球)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = [
    "mcp",
    "model-context-protocol",
    "zhishixingqiu",
    "zsxq",
    "知识星球",
    "social-media",
    "publishing",
    "automation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/zsxq-mcp"
Documentation = "https://github.com/yourusername/zsxq-mcp#readme"
Repository = "https://github.com/yourusername/zsxq-mcp.git"
"Bug Tracker" = "https://github.com/yourusername/zsxq-mcp/issues"
"Source Code" = "https://github.com/yourusername/zsxq-mcp"

[project.scripts]
zsxq-publisher = "zsxq_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zsxq_mcp"]
